--- a/src/Redux/counter/Counter.module.css
+++ b/src/Redux/counter/Counter.module.css
@@ -1,4 +1,4 @@
-.row {
+/* .row {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -72,4 +72,4 @@
   width: 0%;
   opacity: 1;
   transition: 0s;
-}
+} */
