navbar,adjusted css dropzone

--- a/src/views/Authentication/sign.scss
+++ b/src/views/Authentication/sign.scss
@@ -16,3 +16,11 @@
 .signs {
   margin: 5em 0 0 0;
 }
+
+form {
+  padding: 10px;
+  margin-top: 50px;
+    input {
+      margin-bottom: 10px;
+    }
+}
