--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -8,17 +8,17 @@
     justify-content: space-between;
     color: #fff;
 
-    p {
-      padding-right: 10px;
-    }
 
     h1 {
       padding-left: 10px;
+      font-size: 1em;
     }
   
     a{
       color: white;
       text-decoration: none;
+      padding-right: 10px;
+      padding-bottom: 0;
     }
   }
 }
