--- a/src/views/Profile/style.scss
+++ b/src/views/Profile/style.scss
@@ -17,3 +17,8 @@ p {
   border: none;
   background-color: transparent;
 }
+img {
+  max-width: 50px;
+  max-height: 50px;
+  border-radius: 50%;
+}
