maps and css profile adjusted

--- a/src/views/Post/PostCreate/style.scss
+++ b/src/views/Post/PostCreate/style.scss
@@ -3,83 +3,93 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&display=swap');
 
-.span {
-  padding-left: 1em;
-  padding-right: 1em;
-  position: relative; //to center buttons
-  top: 20%;
-  left: 15%;
-  margin-left: auto;
-}
+.post-create-container {
+  display: flex;
+  flex-direction: column;
+  .span {
+    padding-left: 1em;
+    padding-right: 1em;
+    position: relative; //to center buttons
+    top: 20%;
+    left: 15%;
+    margin-left: auto;
+  }
 
-// .button-section {
-//   display: flex;
-//   flex-direction: row;
-// }
-.post-add-buttons {
-  margin-top: 1em;
-  margin-bottom: 2em;
-  color: #fff;
-  background-color: #2fb86e;
-  width: 120px;
-  height: 30px;
-  border-radius: 5px;
-  border: none;
-  background-color: #2fb86e;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1em;
-  z-index: 3;
-}
-.post-add-buttons:active {
-  vertical-align: top;
-  padding: 8px 13px 6px;
-}
+  // .button-section {
+  //   display: flex;
+  //   flex-direction: row;
+  // }
+  .post-add-buttons {
+    margin-top: 1em;
+    margin-bottom: 2em;
+    color: #fff;
+    background-color: #2fb86e;
+    width: 120px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: #2fb86e;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
+    z-index: 3;
+  }
+  .post-add-buttons:active {
+    vertical-align: top;
+    padding: 8px 13px 6px;
+  }
 
-// button {
-//     a {
-//       color: white;
-//       text-decoration: none;
-//     }
-//   }
+  // button {
+  //     a {
+  //       color: white;
+  //       text-decoration: none;
+  //     }
+  //   }
 
-.title {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 500;
-  font-size: 1.8em;
-  text-align: center;
-  padding-top: 1em;
-}
+  .title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 1.8em;
+    text-align: center;
+    padding-top: 1em;
+  }
 
-.location {
-  margin-top: 2em;
-  text-align: center;
-}
-.post {
-  margin-top: 1em;
-  color: #fff;
-  background-color: #2fb86e;
-  width: 140px;
-  height: 30px;
-  border-radius: 5px;
-  border: none;
-  background-color: #2fb86e;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1em;
-  z-index: 3;
-}
+  .location {
+    margin-top: 2em;
+    text-align: center;
+  }
+  .post {
+    margin-top: 1em;
+    color: #fff;
+    background-color: #2fb86e;
+    width: 140px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: #2fb86e;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
+    z-index: 3;
+  }
 
-.post:active {
-  vertical-align: top;
-  padding: 8px 13px 6px;
-}
+  .post:active {
+    vertical-align: top;
+    padding: 8px 13px 6px;
+  }
 
-.post-pos {
-  position: relative; //to center buttons
-  left: 40%;
-  padding-bottom: 2em;
-  display: inline;
-}
+  .post-pos {
+    position: relative; //to center buttons
+    left: 40%;
+    padding-bottom: 2em;
+    display: inline;
+  }
 
-.location {
-  text-align: center;
+  .location {
+    text-align: center;
+  }
+
+  .map-container {
+    display: flex;
+    width: 100%;
+    height: 300px;
+  }
 }
