--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -7,18 +7,34 @@
     align-items: center;
     justify-content: space-between;
     color: #fff;
-
-
+    margin-bottom: 1em;
+    padding: 1em;
+    flex-direction: row-reverse;
     h1 {
       padding-left: 10px;
       font-size: 1em;
-    }
-  
-    a{
       color: white;
-      text-decoration: none;
-      padding-right: 10px;
-      padding-bottom: 0;
     }
   }
+}
+#basic-nav-dropdown {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  a {
+    display: flex;
+    align-items: flex-end;
+    justify-content: end;
+    text-align: right !important;
+    margin: auto;
+  }
+}
+.color-a-nav {
+  color: white;
+}
+.dropdown-menu.show {
+  display: block;
+  align-content: flex-end;
+  justify-content: flex-end;
 }
