--- a/src/components/Materials/style.scss
+++ b/src/components/Materials/style.scss
@@ -1,19 +1,36 @@
-@import '~bootstrap/scss/bootstrap';
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
-
-body {
-  font-family: 'Roboto', sans-serif;
+.materials-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .materials-row {
+    display: flex;
+    width: 300px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    .box {
+      width: 80px;
+      height: 80px;
+      padding: 10px;
+      border: 1px solid grey;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      img {
+        width: 80%;
+        height: 80%;
+      }
+      &.selected{
+        background-color: #E1FAEC;
+        border-color: rgb(104, 202, 146);
+      }
+    }
+  }
 }
 
-.material-img {
-  vertical-align: top;
-  border-radius: 5px;
-  width: 10em;
-  height: 8em;
-  margin: 1em;
-  box-shadow: 5px 5px 15px grey;
-}
+/* 
+
 
 .materials-container {
   width: 100%;
@@ -22,11 +39,42 @@ body {
   flex-direction: column;
   align-items: center;
   margin-top: 1em;
+
+  .materials-row {
+    width: 100%;
+    display: flex;
+      .material-img {
+        vertical-align: top;
+        border-radius: 5px;
+        width: 80px;
+        height: 80px;
+        box-shadow: 5px 5px 15px grey;
+          img {
+            width: 10px;
+            padding: 5px;
+          }
+      }
+  }
+  
+  .material-name {
+    text-align: center;
+    color: #2fb86e;
+    font-size: 1em;
+    font-weight: 500;
+    // display: block;
+    clear: left;
+    margin-top: 10px;
+    width: inherit;
+  }
+  
+  .box {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 50px;
+  }
 }
-.materials-row {
-  display: flex;
-  justify-content: column;
-}
+ */
 
 // .material-name {
 //   display: inline;
@@ -54,23 +102,6 @@ body {
 //   background-color: #2fb86e;
 //   border-color: #2fb86e;
 // }
-
-.material-name {
-  text-align: center;
-  color: #2fb86e;
-  font-size: 1em;
-  font-weight: 500;
-  // display: block;
-  clear: left;
-  margin-top: 10px;
-  width: inherit;
-}
-
-.box {
-  display: flex;
-  flex-wrap: wrap;
-  width: 200px;
-}
 
 // @media only screen and (min-width: 600px) {
 //   .box {
